src/ANTLR4/one_c_grammar/BSLMethodDescriptionParser.py
# Generated from BSLMethodDescriptionParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BSLMethodDescriptionParser ( Parser ):

    grammarFileName = "BSLMethodDescriptionParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "':'", "','", "'//'", "<INVALID>", "<INVALID>", "'('", 
                     "')'" ]

    symbolicNames = [ "<INVALID>", "PARAMETERS_KEYWORD", "RETURNS_KEYWORD", 
                      "EXAMPLE_KEYWORD", "CALL_OPTIONS_KEYWORD", "DEPRECATE_KEYWORD", 
                      "SEE_KEYWORD", "OF_KEYWORD", "EOL", "SPACE", "STAR", 
                      "DASH", "COLON", "COMMA", "COMMENT", "WORD", "DOTSWORD", 
                      "LPAREN", "RPAREN", "ANYSYMBOL" ]

    RULE_methodDescription = 0
    RULE_deprecate = 1
    RULE_deprecateDescription = 2
    RULE_descriptionBlock = 3
    RULE_description = 4
    RULE_descriptionString = 5
    RULE_examples = 6
    RULE_examplesString = 7
    RULE_callOptions = 8
    RULE_callOptionsString = 9
    RULE_parameters = 10
    RULE_parameterString = 11
    RULE_parameter = 12
    RULE_subParameter = 13
    RULE_parameterName = 14
    RULE_returnsValues = 15
    RULE_returnsValuesString = 16
    RULE_returnsValue = 17
    RULE_typesBlock = 18
    RULE_typeDescription = 19
    RULE_type = 20
    RULE_simpleType = 21
    RULE_listTypes = 22
    RULE_complexType = 23
    RULE_hyperlinkType = 24
    RULE_spitter = 25
    RULE_hyperlinkBlock = 26
    RULE_startPart = 27

    ruleNames =  [ "methodDescription", "deprecate", "deprecateDescription", 
                   "descriptionBlock", "description", "descriptionString", 
                   "examples", "examplesString", "callOptions", "callOptionsString", 
                   "parameters", "parameterString", "parameter", "subParameter", 
                   "parameterName", "returnsValues", "returnsValuesString", 
                   "returnsValue", "typesBlock", "typeDescription", "type", 
                   "simpleType", "listTypes", "complexType", "hyperlinkType", 
                   "spitter", "hyperlinkBlock", "startPart" ]

    EOF = Token.EOF
    PARAMETERS_KEYWORD=1
    RETURNS_KEYWORD=2
    EXAMPLE_KEYWORD=3
    CALL_OPTIONS_KEYWORD=4
    DEPRECATE_KEYWORD=5
    SEE_KEYWORD=6
    OF_KEYWORD=7
    EOL=8
    SPACE=9
    STAR=10
    DASH=11
    COLON=12
    COMMA=13
    COMMENT=14
    WORD=15
    DOTSWORD=16
    LPAREN=17
    RPAREN=18
    ANYSYMBOL=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MethodDescriptionContext(BSLParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BSLMethodDescriptionParser.EOF, 0)

        def deprecate(self):
            return self.getTypedRuleContext(BSLMethodDescriptionParser.DeprecateContext,0)


        def descriptionBlock(self):
            return self.getTypedRuleContext(BSLMethodDescriptionParser.DescriptionBlockContext,0)


        def parameters(self):
            return self.getTypedRuleContext(BSLMethodDescriptionParser.ParametersContext,0)


        def callOptions(self):
            return self.getTypedRuleContext(BSLMethodDescriptionParser.CallOptionsContext,0)


        def returnsValues(self):
            return self.getTypedRuleContext(BSLMethodDescriptionParser.ReturnsValuesContext,0)


        def examples(self):
            return self.getTypedRuleContext(BSLMethodDescriptionParser.ExamplesContext,0)


        def getRuleIndex(self):
            return BSLMethodDescriptionParser.RULE_methodDescription

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDescription" ):
                listener.enterMethodDescription(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDescription" ):
                listener.exitMethodDescription(self)




    def methodDescription(self):

        localctx = BSLMethodDescriptionParser.MethodDescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_methodDescription)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 200
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,48,self._ctx)
            if la_ == 1:
                self.state = 57
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 56
                    self.deprecate()


                self.state = 60
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 59
                    self.descriptionBlock()


                self.state = 63
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 62
                    self.parameters()


                self.state = 66
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 65
                    self.callOptions()


                self.state = 69
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 68
                    self.returnsValues()


                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9 or _la==14:
                    self.state = 71
                    self.examples()


                pass

            elif la_ == 2:
                self.state = 75
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 74
                    self.deprecate()


                self.state = 78
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 77
                    self.descriptionBlock()


                self.state = 81
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 80
                    self.parameters()


                self.state = 84
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 83
                    self.examples()


                self.state = 87
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 86
                    self.returnsValues()


                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9 or _la==14:
                    self.state = 89
                    self.callOptions()


                pass

            elif la_ == 3:
                self.state = 93
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                if la_ == 1:
                    self.state = 92
                    self.deprecate()


                self.state = 96
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                if la_ == 1:
                    self.state = 95
                    self.descriptionBlock()


                self.state = 99
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                if la_ == 1:
                    self.state = 98
                    self.parameters()


                self.state = 102
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                if la_ == 1:
                    self.state = 101
                    self.callOptions()


                self.state = 105
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
                if la_ == 1:
                    self.state = 104
                    self.examples()


                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9 or _la==14:
                    self.state = 107
                    self.returnsValues()


                pass

            elif la_ == 4:
                self.state = 111
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
                if la_ == 1:
                    self.state = 110
                    self.deprecate()


                self.state = 114
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
                if la_ == 1:
                    self.state = 113
                    self.descriptionBlock()


                self.state = 117
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
                if la_ == 1:
                    self.state = 116
                    self.parameters()


                self.state = 120
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
                if la_ == 1:
                    self.state = 119
                    self.examples()


                self.state = 123
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
                if la_ == 1:
                    self.state = 122
                    self.callOptions()


                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9 or _la==14:
                    self.state = 125
                    self.returnsValues()


                pass

            elif la_ == 5:
                self.state = 129
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,24,self._ctx)
                if la_ == 1:
                    self.state = 128
                    self.descriptionBlock()


                self.state = 132
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,25,self._ctx)
                if la_ == 1:
                    self.state = 131
                    self.parameters()


                self.state = 135
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,26,self._ctx)
                if la_ == 1:
                    self.state = 134
                    self.callOptions()


                self.state = 138
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,27,self._ctx)
                if la_ == 1:
                    self.state = 137
                    self.returnsValues()


                self.state = 141
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,28,self._ctx)
                if la_ == 1:
                    self.state = 140
                    self.examples()


                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9 or _la==14:
                    self.state = 143
                    self.deprecate()


                pass

            elif la_ == 6:
                self.state = 147
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,30,self._ctx)
                if la_ == 1:
                    self.state = 146
                    self.descriptionBlock()


                self.state = 150
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,31,self._ctx)
                if la_ == 1:
                    self.state = 149
                    self.parameters()


                self.state = 153
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,32,self._ctx)
                if la_ == 1:
                    self.state = 152
                    self.examples()


                self.state = 156
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,33,self._ctx)
                if la_ == 1:
                    self.state = 155
                    self.returnsValues()


                self.state = 159
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,34,self._ctx)
                if la_ == 1:
                    self.state = 158
                    self.callOptions()


                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9 or _la==14:
                    self.state = 161
                    self.deprecate()


                pass

            elif la_ == 7:
                self.state = 165
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,36,self._ctx)
                if la_ == 1:
                    self.state = 164
                    self.descriptionBlock()


                self.state = 168
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,37,self._ctx)
                if la_ == 1:
                    self.state = 167
                    self.parameters()


                self.state = 171
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,38,self._ctx)
                if la_ == 1:
                    self.state = 170
                    self.callOptions()


                self.state = 174
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,39,self._ctx)
                if la_ == 1:
                    self.state = 173
                    self.examples()


                self.state = 177
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,40,self._ctx)
                if la_ == 1:
                    self.state = 176
                    self.returnsValues()


                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9 or _la==14:
                    self.state = 179
                    self.deprecate()


                pass

            elif la_ == 8:
                self.state = 183
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,42,self._ctx)
                if la_ == 1:
                    self.state = 182
                    self.descriptionBlock()


                self.state = 186
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,43,self._ctx)
                if la_ == 1:
                    self.state = 185
                    self.parameters()


                self.state = 189
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,44,self._ctx)
                if la_ == 1:
                    self.state = 188
                    self.examples()


                self.state = 192
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,45,self._ctx)
                if la_ == 1:
                    self.state = 191
                    self.callOptions()


                self.state = 195
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,46,self._ctx)
                if la_ == 1:
                    self.state = 194
                    self.returnsValues()


                self.state = 198
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9 or _la==14:
                    self.state = 197
                    self.deprecate()


                pass


            self.state = 202
            self.match(BSLMethodDescriptionParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeprecateContext(BSLParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def startPart(self):
            return self.getTypedRuleContext(BSLMethodDescriptionParser.StartPartContext,0)


        def DEPRECATE_KEYWORD(self):
            return self.getToken(BSLMethodDescriptionParser.DEPRECATE_KEYWORD, 0)

        def SPACE(self):
            return self.getToken(BSLMethodDescriptionParser.SPACE, 0)

        def deprecateDescription(self):
            return self.getTypedRuleContext(BSLMethodDescriptionParser.DeprecateDescriptionContext,0)


        def EOL(self):
            return self.getToken(BSLMethodDescriptionParser.EOL, 0)

        def getRuleIndex(self):
            return BSLMethodDescriptionParser.RULE_deprecate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeprecate" ):
                listener.enterDeprecate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeprecate" ):
                listener.exitDeprecate(self)




    def deprecate(self):

        localctx = BSLMethodDescriptionParser.DeprecateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_deprecate)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 204
            self.startPart()
            self.state = 205
            self.match(BSLMethodDescriptionParser.DEPRECATE_KEYWORD)
            self.state = 208
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,49,self._ctx)
            if la_ == 1:
                self.state = 206
                self.match(BSLMethodDescriptionParser.SPACE)
                self.state = 207
                self.deprecateDescription()


            self.state = 211
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 210
                self.match(BSLMethodDescriptionParser.EOL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeprecateDescriptionContext(BSLParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self):
            return self.getToken(BSLMethodDescriptionParser.SPACE, 0)

        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(BSLMethodDescriptionParser.EOL)
            else:
                return self.getToken(BSLMethodDescriptionParser.EOL, i)

        def getRuleIndex(self):
            return BSLMethodDescriptionParser.RULE_deprecateDescription

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeprecateDescription" ):
                listener.enterDeprecateDescription(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeprecateDescription" ):
                listener.exitDeprecateDescription(self)




    def deprecateDescription(self):

        localctx = BSLMethodDescriptionParser.DeprecateDescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_deprecateDescription)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 213
            _la = self._input.LA(1)
            if _la <= 0 or _la==8 or _la==9:
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 217
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,51,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 214
                    _la = self._input.LA(1)
                    if _la <= 0 or _la==8:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume() 
                self.state = 219
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,51,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescriptionBlockContext(BSLParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def hyperlinkBlock(self):
            return self.getTypedRuleContext(BSLMethodDescriptionParser.HyperlinkBlockContext,0)


        def description(self):
            return self.getTypedRuleContext(BSLMethodDescriptionParser.DescriptionContext,0)


        def EOL(self):
            return self.getToken(BSLMethodDescriptionParser.EOL, 0)

        def getRuleIndex(self):
            return BSLMethodDescriptionParser.RULE_descriptionBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescriptionBlock" ):
                listener.enterDescriptionBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescriptionBlock" ):
                listener.exitDescriptionBlock(self)




    def descriptionBlock(self):

        localctx = BSLMethodDescriptionParser.DescriptionBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_descriptionBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 222
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,52,self._ctx)
            if la_ == 1:
                self.state = 220
                self.hyperlinkBlock()
                pass

            elif la_ == 2:
                self.state = 221
                self.description()
                pass


            self.state = 225
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 224
                self.match(BSLMethodDescriptionParser.EOL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescriptionContext(BSLParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def descriptionString(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BSLMethodDescriptionParser.DescriptionStringContext)
            else:
                return self.getTypedRuleContext(BSLMethodDescriptionParser.DescriptionStringContext,i)


        def getRuleIndex(self):
            return BSLMethodDescriptionParser.RULE_description

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescription" ):
                listener.enterDescription(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescription" ):
                listener.exitDescription(self)




    def description(self):

        localctx = BSLMethodDescriptionParser.DescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_description)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 228 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 227
                    self.descriptionString()

                else:
                    raise NoViableAltException(self)
                self.state = 230 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,54,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescriptionStringContext(BSLParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def startPart(self):
            return self.getTypedRuleContext(BSLMethodDescriptionParser.StartPartContext,0)


        def PARAMETERS_KEYWORD(self):
            return self.getToken(BSLMethodDescriptionParser.PARAMETERS_KEYWORD, 0)

        def RETURNS_KEYWORD(self):
            return self.getToken(BSLMethodDescriptionParser.RETURNS_KEYWORD, 0)

        def EXAMPLE_KEYWORD(self):
            return self.getToken(BSLMethodDescriptionParser.EXAMPLE_KEYWORD, 0)

        def CALL_OPTIONS_KEYWORD(self):
            return self.getToken(BSLMethodDescriptionParser.CALL_OPTIONS_KEYWORD, 0)

        def DEPRECATE_KEYWORD(self):
            return self.getToken(BSLMethodDescriptionParser.DEPRECATE_KEYWORD, 0)

        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(BSLMethodDescriptionParser.EOL)
            else:
                return self.getToken(BSLMethodDescriptionParser.EOL, i)

        def SPACE(self):
            return self.getToken(BSLMethodDescriptionParser.SPACE, 0)

        def getRuleIndex(self):
            return BSLMethodDescriptionParser.RULE_descriptionString

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescriptionString" ):
                listener.enterDescriptionString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescriptionString" ):
                listener.exitDescriptionString(self)




    def descriptionString(self):

        localctx = BSLMethodDescriptionParser.DescriptionStringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_descriptionString)
        self._la = 0 # Token type
        try:
            self.state = 246
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,57,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 232
                self.startPart()
                self.state = 233
                _la = self._input.LA(1)
                if _la <= 0 or (((_la) & ~0x3f) == 0 and ((1 << _la) & 830) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 237
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,55,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 234
                        _la = self._input.LA(1)
                        if _la <= 0 or _la==8:
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 239
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,55,self._ctx)

                self.state = 241
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,56,self._ctx)
                if la_ == 1:
                    self.state = 240
                    self.match(BSLMethodDescriptionParser.EOL)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 243
                self.startPart()
                self.state = 244
                self.match(BSLMethodDescriptionParser.EOL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExamplesContext(BSLParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def startPart(self):
            return self.getTypedRuleContext(BSLMethodDescriptionParser.StartPartContext,0)


        def EXAMPLE_KEYWORD(self):
            return self.getToken(BSLMethodDescriptionParser.EXAMPLE_KEYWORD, 0)

        def EOL(self):
            return self.getToken(BSLMethodDescriptionParser.EOL, 0)

        def examplesString(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BSLMethodDescriptionParser.ExamplesStringContext)
            else:
                return self.getTypedRuleContext(BSLMethodDescriptionParser.ExamplesStringContext,i)


        def getRuleIndex(self):
            return BSLMethodDescriptionParser.RULE_examples

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExamples" ):
                listener.enterExamples(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExamples" ):
                listener.exitExamples(self)




    def examples(self):

        localctx = BSLMethodDescriptionParser.ExamplesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_examples)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 248
            self.startPart()
            self.state = 249
            self.match(BSLMethodDescriptionParser.EXAMPLE_KEYWORD)
            self.state = 257
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 250
                self.match(BSLMethodDescriptionParser.EOL)
                self.state = 254
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,58,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 251
                        self.examplesString() 
                    self.state = 256
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,58,self._ctx)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExamplesStringContext(BSLParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def startPart(self):
            return self.getTypedRuleContext(BSLMethodDescriptionParser.StartPartContext,0)


        def CALL_OPTIONS_KEYWORD(self):
            return self.getToken(BSLMethodDescriptionParser.CALL_OPTIONS_KEYWORD, 0)

        def RETURNS_KEYWORD(self):
            return self.getToken(BSLMethodDescriptionParser.RETURNS_KEYWORD, 0)
